# Dashboard_Plotly

./: .gitignore  INSTRUCCIONES.txt  INSTRUCCIONES_BILLING.txt  Ideas.txt  PREGUNTAS.txt  PROJECT_SUMMARY.md  Procfile  README.md  RENDER_DEPLOYMENT.md  analysis.py  app.py  billing_dashboard.py  billing_dashboard_report.html  billing_dashboard_report_simple.html  deploy.md  environment.yml  generate_email_report.py  generate_email_report_complete.py  generate_email_report_simple.py  pyproject.toml  render.yaml  requirements.txt  setup.py  setup.sh  setup_conda.sh
