[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "billing-dashboard"
version = "1.0.0"
description = "Interactive billing operations dashboard"
authors = [
    {name = "Francisco Sabena", email = "alfredo.sabena@mi.unc.edu.ar"}
]
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "dash>=2.18.0",
    "dash-bootstrap-components>=1.6.0",
    "plotly>=5.22.0",
    "pandas>=2.2.0",
    "numpy>=2.0.0",
    "scikit-learn>=1.5.0",
    "seaborn>=0.13.0",
    "matplotlib>=3.9.0",
    "folium>=0.16.0",
    "dash-extensions>=1.0.4",
    "gunicorn>=23.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["*"]
exclude = ["tests*", "docs*"]

[tool.black]
line-length = 88
target-version = ['py312']

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
